Moved images under assets. Fixes images not showing when using Gulp dist

--- a/iot-homebrew/src/app/styles/_base.scss
+++ b/iot-homebrew/src/app/styles/_base.scss
@@ -7,7 +7,7 @@ html {
 body {
     color: #fff;
   font-family: "Lato", Verdana;
-  background: #000 url("../img/bg.png") no-repeat center center fixed;
+  background: #000 url("/assets/img/bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
