--- a/iot-homebrew/src/app/temperature/temperature.scss
+++ b/iot-homebrew/src/app/temperature/temperature.scss
@@ -56,7 +56,7 @@ html {
 .temperature {
   font-family: "Lato", Verdana;
   color: #fff;
-  background: #000 url("../../img/bg.png") no-repeat center center fixed;
+  background: #000 url("/assets/img/bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
